--- a/elm-refactor.cabal
+++ b/elm-refactor.cabal
@@ -16,10 +16,10 @@ build-type:          Simple
 cabal-version:       >=1.10
 
 executable elm-refactor
-  -- main-is:             
+  main-is:             Main.hs
   -- other-modules:       
   other-extensions:    OverloadedStrings, FlexibleContexts, MultiParamTypeClasses, ScopedTypeVariables
   build-depends:       base >=4.8 && <4.9,
                        elm-compiler == 0.16
-  -- hs-source-dirs:      
+  hs-source-dirs:      src
   default-language:    Haskell2010
